--- a/.github/workflows/List_Default_GitHub_vars.yml
+++ b/.github/workflows/List_Default_GitHub_vars.yml
@@ -18,3 +18,20 @@ jobs:
     runs-on: macos-latest
     steps:
       - run: env
+
+  common-default-env-vars:
+    runs-on: ubuntu-latest
+    steps:
+      - name: print-values-of-default-env-vars
+        run: |
+          echo "$GITHUB_ACTION"
+          echo "$GITHUB_ENV"
+          echo "$GITHUB_API_URL"
+          echo "$GITHUB_JOB"
+          echo "$GITHUB_PATH"
+          echo "$GITHUB_STEP_SUMMARY"
+          echo "$GITHUB_WORKFLOW"
+          echo "$GITHUB_REPOSITORY_OWNER"
+          echo "$GITHUB_RUN_NUMBER"
+          echo "$GITHUB_SERVER_URL"
+          echo "$RUNNER_NAME"
